[gd_scene load_steps=5 format=2]

[ext_resource path="res://experimental/KeyAnim.tscn" type="PackedScene" id=1]
[ext_resource path="res://experimental/TestArena.gd" type="Script" id=2]
[ext_resource path="res://addons/midi/MidiPlayer.gd" type="Script" id=3]
[ext_resource path="res://experimental/SpearTest.ogg" type="AudioStream" id=4]

[node name="TestArena" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Control3" type="Control" parent="."]
margin_right = 125.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="KeyAnim" parent="." instance=ExtResource( 1 )]
margin_left = 151.0
margin_top = 260.0
margin_right = 231.0
margin_bottom = 340.0
button = "Q"

[node name="KeyAnim2" parent="." instance=ExtResource( 1 )]
margin_left = 280.0
margin_top = 260.0
margin_right = 360.0
margin_bottom = 340.0

[node name="Control" type="Control" parent="."]
margin_left = 387.0
margin_right = 637.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="KeyAnim3" parent="." instance=ExtResource( 1 )]
margin_left = 663.0
margin_top = 260.0
margin_right = 743.0
margin_bottom = 340.0
button = "O"

[node name="KeyAnim4" parent="." instance=ExtResource( 1 )]
margin_left = 792.0
margin_top = 260.0
margin_right = 872.0
margin_bottom = 340.0
button = "P"

[node name="Control2" type="Control" parent="."]
margin_left = 899.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Timer" type="Timer" parent="."]
wait_time = 1.249
one_shot = true
autostart = true

[node name="MidiPlayer" type="Node" parent="."]
script = ExtResource( 3 )
file = "res://experimental/spear_test.mid"
playing = true
volume_db = -144.0
soundfont = "res://experimental/Yoshi's Island.sf2"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="midi_event" from="MidiPlayer" to="." method="_on_MidiPlayer_midi_event"]
